# magic_monitor

./: Cargo.toml  README.md
src/: dexclient.rs  lib.rs  main.rs
src/dex_collect/: mod.rs
src/dex_collect/raydium/: mod.rs  raydium_client.rs  raydium_depth.rs
src/dex_collect/serum/: mod.rs  serum_client.rs  serum_depth.rs
